2008-08-08  Alan Modra  <amodra@bigpond.net.au>

	* doc/internals.texi (DWARF2_FORMAT): Update for 2008-08-04 change.

2008-08-06  Richard Sandiford  <rdsandiford@googlemail.com>

	* config/tc-mips.c (mips16_reloc_p, got16_reloc_p, hi16_reloc_p)
	(lo16_reloc_p): New functions.
	(reloc_needs_lo_p): Use hi16_reloc_p and got16_reloc_p to
	generalize relocation checks.
	(matching_lo_reloc): New function.
	(fixup_has_matching_lo_p): Use it.
	(mips16_mark_labels): Don't clobber a symbol's visibility.
	(append_insn): Use hi16_reloc_p and lo16_reloc_p.
	(mips16_ip): Handle BFD_RELOC_MIPS16_GOT16 and BFD_RELOC_MIPS16_CALL16.
	(md_apply_fix): Likewise.
	(mips16_percent_op): Add %got and %call16.
	(mips_frob_file): Use got16_reloc_p to generalize relocation checks.
	Use matching_lo_reloc.
	(mips_force_relocation): Use hi16_reloc_p and lo16_reloc_p to
	generalize relocation checks.
	(mips_fix_adjustable): Use lo16_reloc_p to generalize relocation
	checks.

2008-08-06  DJ Delorie  <dj@redhat.com>

	* NEWS: Mention these changes.

	* config/tc-h8300.h (H_TICK_HEX): Define.
	* config/tc-h8300.c (OPTION_H_TICK_HEX): New.
	(md_longopts): Add "-h-tick-hex".
	(md_parse_option): Support it.
	* doc/c-h8300.texi (H8/300 Options): Document it.
	* doc/as.texinfo (Overview): Likewise.
	
	* config/tc-sh.h (H_TICK_HEX): Define.
	* config/tc-sh.c (OPTION_H_TICK_HEX): New.
	(md_longopts): Add "-h-tick-hex".
	(md_parse_option): Support it.
	* doc/c-sh.texi (SH Options): Document it.
	* doc/c-sh64.texi (SH64 Options): Document it.
	* doc/as.texinfo (Overview): Likewise.

2008-08-05  Alan Modra  <amodra@bigpond.net.au>

	PR gas/6656
	* dwarf2dbg.c (dwarf2_directive_file): Disable gas generated
	debug info if we see compiler generated debug info.
	(dwarf2_directive_loc): Likewise.  Remove redundant debug_type test.

2008-08-04  Alan Modra  <amodra@bigpond.net.au>

	* dwarf2dbg.c: Remove superfluous forward function declarations.
	(DWARF2_FORMAT): Add section arg.